package(default_visibility = ["//visibility:public"])

cc_library(
    name = "36_ValidSudoku",
    srcs = glob(
        ["src/*.h"],
    ),
    copts = select({
        "//conditions:default": [
            "-Wall",
            "-Werror",
        ],
        "@platforms//os:windows": [
            "/WX",
            "/W4",
        ],
    }),
    includes = ["src"],
)
